--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -29,3 +29,6 @@
 // LAYOUT =====================================================
 // Page level layout styles ===================================
 @import "page.less";
+// CUSTOM =====================================================
+// Custom level layout styles ===================================
+@import "custom.less";
