--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -114,6 +114,17 @@ li {
  */
 h1, h2, h3, h4, h5, h6 {
   font-weight: $base-font-weight;
+  a {
+    color: $text-color;
+    text-decoration: none;
+    background-color: $background-color;
+
+    &:hover {
+      color: $background-color;
+      background-color: $text-color;
+      text-decoration: none;
+    }
+  }
 }
 
 
@@ -122,16 +133,13 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-  color: $brand-color;
+  color: $background-color;
+  background-color: $text-color;
   text-decoration: none;
-
-  &:visited {
-    color: darken($brand-color, 15%);
-  }
 
   &:hover {
     color: $brand-color;
-    background-color: $hover-color;
+    background-color: $text-color;
     text-decoration: none;
   }
 
