--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -12,7 +12,7 @@
 
 .site-title {
   @include relative-font-size(1.625);
-  font-weight: 300;
+  font-weight: bold;
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: -1px;
   margin-bottom: 0;
@@ -20,7 +20,8 @@
 
   &,
   &:visited {
-    color: $grey-color-dark;
+    color: $text-color;
+    background-color: $background-color;
   }
 }
 
@@ -38,7 +39,13 @@
 
   .page-link {
     color: $text-color;
+    background-color: $background-color;
     line-height: $base-line-height;
+    &:hover{
+      color: $background-color;
+      background-color: $text-color;
+      text-decoration: none;
+    }
 
     // Gaps between nav items, but not on the last one
     &:not(:last-child) {
